# file_upload

./: .gitignore  README.md  pyproject.toml  runserver.sh
apps/file_upload/: admin.py  apps.py  models.py  views.py
apps/file_upload/templates/: file_upload.html  file_upload_list.html
apps/file_upload/templatetags/: render_vite_bundle.py
apps/frontend/: views.py
apps/frontend/templates/: base.html
apps/pages/: views.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/file_upload/: FileUpload.css  FileUpload.tsx
static/css/: styles.css
templates/: default.html
